samples/_failures_safe/1761598973_50f4e0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1c4cf6f9.c: In function ‘main’:
./samples/SAFE/__tmp_1c4cf6f9.c:139:12: error: missing terminating " character
  139 |     printf("Enter log entries (format: YYYY-MM-DD HH:MM:SS LEVEL
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_1c4cf6f9.c:139:5: error: expected expression at end of input
  139 |     printf("Enter log entries (format: YYYY-MM-DD HH:MM:SS LEVEL
      |     ^~~~~~
./samples/SAFE/__tmp_1c4cf6f9.c:139:5: error: expected declaration or statement at end of input
